--- a/configs/st_stm32mp157f_dk2_demo_defconfig
+++ b/configs/st_stm32mp157f_dk2_demo_defconfig
@@ -43,6 +43,7 @@ BR2_PACKAGE_BLUEZ5_UTILS=y
 BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_IW=y
+BR2_PACKAGE_WIRELESS_REGDB=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_AP_SUPPORT=y
 BR2_PACKAGE_WPA_SUPPLICANT_WIFI_DISPLAY=y
