--- a/.github/workflows/buildroot-external-st.yml
+++ b/.github/workflows/buildroot-external-st.yml
@@ -4,7 +4,7 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        config: [ st_stm32mp157a_dk1_defconfig, st_stm32mp157a_dk1_demo_defconfig, st_stm32mp157d_dk1_defconfig, st_stm32mp157d_dk1_demo_defconfig, st_stm32mp157c_dk2_defconfig, st_stm32mp157c_dk2_demo_defconfig, st_stm32mp157f_dk2_defconfig, st_stm32mp157f_dk2_demo_defconfig, st_stm32mp135f_dk_defconfig, st_stm32mp135f_dk_demo_defconfig ]
+        config: [ st_stm32mp157a_dk1, st_stm32mp157a_dk1_demo, st_stm32mp157d_dk1, st_stm32mp157d_dk1_demo, st_stm32mp157c_dk2, st_stm32mp157c_dk2_demo, st_stm32mp157f_dk2, st_stm32mp157f_dk2_demo, st_stm32mp135f_dk, st_stm32mp135f_dk_demo]
     steps:
       - uses: actions/checkout@v3
         with:
@@ -14,16 +14,32 @@ jobs:
           repository: bootlin/buildroot
           ref: st/2023.02.2
           path: buildroot
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      - name: Install b2
+        run: pip install b2
       - name: Configure Buildroot
-        run: make -C buildroot BR2_EXTERNAL=../buildroot-external-st O=../output ${{ matrix.config }}
+        run: make -C buildroot BR2_EXTERNAL=../buildroot-external-st O=../output ${{ matrix.config }}_defconfig
       - name: Build Buildroot
-        run: make -C buildroot BR2_EXTERNAL=../buildroot-external-st O=../output
-      - name: Run legal-info
-        run: make -C buildroot BR2_EXTERNAL=../buildroot-external-st O=../output legal-info
+        run: make -C buildroot O=../output
+      - name: Generate legal-info
+        run: make -C buildroot O=../output legal-info
+      - name: Build SDK
+        run: make -C buildroot O=../output sdk
       - name: Compress sdcard.img
         run: gzip -9 output/images/sdcard.img
-      - name: Store images
-        uses: actions/upload-artifact@v3
-        with:
-          name: image-${{ matrix.config }}
-          path: output/images/sdcard.img.gz
+      - name: Archive and compress sources
+        run: tar -cf - -C output/legal-info sources | gzip -9 - > sources-${{ matrix.config }}.tar.gz
+      - name: Archive and compress licenses
+        run: tar -cf - -C output/legal-info licenses | gzip -9 - > licenses-${{ matrix.config }}.tar.gz
+      - name: Register to b2
+        run: b2 authorize_account ${{ secrets.B2_KEY_ID }} ${{ secrets.B2_APPLICATION_KEY }}
+      - name: Store image
+        run: b2 upload-file bootlin-buildroot-st output/images/sdcard.img.gz ${{ github.ref_name }}/image-${{ matrix.config }}.img.gz
+      - name: Store SDK
+        run: b2 upload-file bootlin-buildroot-st output/images/arm-buildroot-linux-gnueabihf_sdk-buildroot.tar.gz ${{ github.ref_name }}/arm-buildroot-linux-gnueabihf_sdk-${{ matrix.config }}.tar.gz
+      - name: Store sources
+        run: b2 upload-file bootlin-buildroot-st sources-${{ matrix.config }}.tar.gz ${{ github.ref_name }}/sources-${{ matrix.config }}.tar.gz
+      - name: Store licenses
+        run: b2 upload-file bootlin-buildroot-st licenses-${{ matrix.config }}.tar.gz ${{ github.ref_name }}/licenses-${{ matrix.config }}.tar.gz
