--- a/.github/workflows/buildroot-external-st.yml
+++ b/.github/workflows/buildroot-external-st.yml
@@ -2,6 +2,8 @@ on: workflow_dispatch
 jobs:
   build-all:
     runs-on: ubuntu-22.04
+    env:
+      repo_version: st/2023.02.2
     strategy:
       matrix:
         config: [ st_stm32mp157a_dk1, st_stm32mp157a_dk1_demo, st_stm32mp157d_dk1, st_stm32mp157d_dk1_demo, st_stm32mp157c_dk2, st_stm32mp157c_dk2_demo, st_stm32mp157f_dk2, st_stm32mp157f_dk2_demo, st_stm32mp135f_dk, st_stm32mp135f_dk_demo]
@@ -12,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: bootlin/buildroot
-          ref: st/2023.02.2
+          ref: $repo_version
           path: buildroot
       - uses: actions/setup-python@v4
         with:
@@ -33,6 +35,11 @@ jobs:
         run: tar -cf - -C output/legal-info sources | gzip -9 - > sources-${{ matrix.config }}.tar.gz
       - name: Archive and compress licenses
         run: tar -cf - -C output/legal-info licenses | gzip -9 - > licenses-${{ matrix.config }}.tar.gz
+      - name: Update the README
+        run: |
+             cp .github/workflows/README README
+             sed -i "s/#CONFIG#/${{ matrix.config }}/" README
+             sed -i "s/#REV#/$repo_version/" README
       - name: Register to b2
         run: b2 authorize_account ${{ secrets.B2_KEY_ID }} ${{ secrets.B2_APPLICATION_KEY }}
       - name: Store image
@@ -43,3 +50,5 @@ jobs:
         run: b2 upload-file bootlin-buildroot-st sources-${{ matrix.config }}.tar.gz ${{ github.ref_name }}/sources-${{ matrix.config }}.tar.gz
       - name: Store licenses
         run: b2 upload-file bootlin-buildroot-st licenses-${{ matrix.config }}.tar.gz ${{ github.ref_name }}/licenses-${{ matrix.config }}.tar.gz
+      - name: Store the README
+        run: b2 upload-file bootlin-buildroot-st README ${{ github.ref_name }}/README-${{ matrix.config }}
