--- a/.github/workflows/buildroot-external-st.yml
+++ b/.github/workflows/buildroot-external-st.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: bootlin/buildroot
-          ref: $repo_version
+          ref: ${{ env.repo_version }}
           path: buildroot
       - uses: actions/setup-python@v4
         with:
@@ -37,9 +37,9 @@ jobs:
         run: tar -cf - -C output/legal-info licenses | gzip -9 - > licenses-${{ matrix.config }}.tar.gz
       - name: Update the README
         run: |
-             cp .github/workflows/README README
-             sed -i "s/#CONFIG#/${{ matrix.config }}/" README
-             sed -i "s/#REV#/$repo_version/" README
+             cp buildroot-external-st/.github/workflows/README README
+             sed -ie "s|#CONFIG#|${{ matrix.config }}|" README
+             sed -ie "s|#REV#|${{ env.repo_version }}|" README
       - name: Register to b2
         run: b2 authorize_account ${{ secrets.B2_KEY_ID }} ${{ secrets.B2_APPLICATION_KEY }}
       - name: Store image
