--- a/configs/st_stm32mp157c_dk2_demo_defconfig
+++ b/configs/st_stm32mp157c_dk2_demo_defconfig
@@ -35,6 +35,7 @@ BR2_PACKAGE_LINUX_FIRMWARE_BRCM_BCM43XXX=y
 BR2_PACKAGE_MURATA_CYW_FW=y
 BR2_PACKAGE_MURATA_CYW_FW_CYW43430=y
 BR2_PACKAGE_GCNANO_BINARIES=y
+BR2_PACKAGE_LIBUBOOTENV=y
 BR2_PACKAGE_LIBDRM_INSTALL_TESTS=y
 BR2_PACKAGE_OPTEE_EXAMPLES=y
 BR2_PACKAGE_OPTEE_TEST=y
