--- a/configs/st_stm32mp157d_dk1_demo_defconfig
+++ b/configs/st_stm32mp157d_dk1_demo_defconfig
@@ -31,6 +31,7 @@ BR2_PACKAGE_QT5BASE_OPENGL_LIB=y
 BR2_PACKAGE_QT5BASE_EGLFS=y
 BR2_PACKAGE_QT5BASE_FONTCONFIG=y
 BR2_PACKAGE_GCNANO_BINARIES=y
+BR2_PACKAGE_LIBUBOOTENV=y
 BR2_PACKAGE_LIBDRM_INSTALL_TESTS=y
 BR2_PACKAGE_OPTEE_EXAMPLES=y
 BR2_PACKAGE_OPTEE_TEST=y
