configs/st_demo: Enable host-rauc package
Enable host-rauc package to be able to generate rauc bundle.

Signed-off-by: Kory Maincent <kory.maincent@bootlin.com>

--- a/configs/st_stm32mp135f_dk_demo_defconfig
+++ b/configs/st_stm32mp135f_dk_demo_defconfig
@@ -85,3 +85,4 @@ BR2_TARGET_UBOOT_FORMAT_CUSTOM_NAME="u-boot-nodtb.bin u-boot.dtb"
 BR2_TARGET_UBOOT_CUSTOM_DTS_PATH="$(BR2_EXTERNAL_ST_PATH)/board/stmicroelectronics/stm32mp1/uboot-dts/*"
 BR2_TARGET_UBOOT_CUSTOM_MAKEOPTS="dtb-y=stm32mp135f-dk-mx.dtb DEVICE_TREE=stm32mp135f-dk-mx"
 BR2_PACKAGE_HOST_GENIMAGE=y
+BR2_PACKAGE_HOST_RAUC=y
