--- a/configs/st_stm32mp157d_dk1_demo_defconfig
+++ b/configs/st_stm32mp157d_dk1_demo_defconfig
@@ -72,4 +72,5 @@ BR2_TARGET_UBOOT_FORMAT_CUSTOM_NAME="u-boot-nodtb.bin u-boot.dtb"
 BR2_TARGET_UBOOT_CUSTOM_DTS_PATH="$(BR2_EXTERNAL_ST_PATH)/board/stmicroelectronics/stm32mp1/uboot-dts/*"
 BR2_TARGET_UBOOT_CUSTOM_MAKEOPTS="dtb-y=stm32mp157d-dk1-mx.dtb DEVICE_TREE=stm32mp157d-dk1-mx"
 BR2_PACKAGE_HOST_GENIMAGE=y
+BR2_PACKAGE_HOST_RAUC=y
 BR2_PACKAGE_M4PROJECTS=y
