configs/st: Enable host bmap package
Enable host-bmap to be able to generate block map of an image.

Signed-off-by: Kory Maincent <kory.maincent@bootlin.com>

--- a/configs/st_stm32mp135f_dk_defconfig
+++ b/configs/st_stm32mp135f_dk_defconfig
@@ -49,4 +49,5 @@ BR2_TARGET_UBOOT_NEEDS_PYLIBFDT=y
 BR2_TARGET_UBOOT_FORMAT_CUSTOM=y
 BR2_TARGET_UBOOT_FORMAT_CUSTOM_NAME="u-boot-nodtb.bin u-boot.dtb"
 BR2_TARGET_UBOOT_CUSTOM_MAKEOPTS="DEVICE_TREE=stm32mp135f-dk"
+BR2_PACKAGE_HOST_BMAP_TOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
