board/st: configs/st: Add a post script arg to specify which genimage config file to use
Update post-image script and configs in order to use the same generate
SDcard image function with two different genimage.cfg config file.
Move on to squashfs root filesystem for the demo defconfig to follow the
new genimage-demo.cfg partition schema. We use squashfs in prevision of the
FOTA support.

Signed-off-by: Kory Maincent <kory.maincent@bootlin.com>

--- a/configs/st_stm32mp157c_dk2_demo_defconfig
+++ b/configs/st_stm32mp157c_dk2_demo_defconfig
@@ -8,6 +8,7 @@ BR2_TARGET_GENERIC_ROOT_PASSWD="root"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_ST_PATH)/board/stmicroelectronics/stm32mp1/overlay/"
 BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_ST_PATH)/board/stmicroelectronics/stm32mp1/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_ST_PATH)/board/stmicroelectronics/stm32mp1/post-image.sh"
+BR2_ROOTFS_POST_SCRIPT_ARGS="genimage-demo.cfg"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,STMicroelectronics,linux)v6.1-stm32mp-r1.1.tar.gz"
@@ -52,9 +53,7 @@ BR2_PACKAGE_WPA_SUPPLICANT_AUTOSCAN=y
 BR2_PACKAGE_WPA_SUPPLICANT_EAP=y
 BR2_PACKAGE_WPA_SUPPLICANT_CLI=y
 BR2_PACKAGE_WPA_SUPPLICANT_PASSPHRASE=y
-BR2_TARGET_ROOTFS_EXT2=y
-BR2_TARGET_ROOTFS_EXT2_4=y
-BR2_TARGET_ROOTFS_EXT2_SIZE="200M"
+BR2_TARGET_ROOTFS_SQUASHFS=y
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_ARM_TRUSTED_FIRMWARE=y
 BR2_TARGET_ARM_TRUSTED_FIRMWARE_CUSTOM_TARBALL=y
