--- a/board/stmicroelectronics/stm32mp1/genimage-demo.cfg
+++ b/board/stmicroelectronics/stm32mp1/genimage-demo.cfg
@@ -27,4 +27,14 @@ image sdcard.img {
 	partition rootfs-b {
 		size = 200M
 	}
+
+	partition data {
+		image = "data.ext4"
+	}
+}
+
+image data.ext4 {
+	name = "data"
+	ext4 {}
+	size = 200M
 }
