board/st/optee-dts/stm32mp135f-dk-mx.dts Add missing node parameter
Add two node parameters which are missing from the devicetree generated
by CubeMX.

Signed-off-by: Kory Maincent <kory.maincent@bootlin.com>

--- a/board/stmicroelectronics/stm32mp1/optee-dts/stm32mp135f-dk-mx.dts
+++ b/board/stmicroelectronics/stm32mp1/optee-dts/stm32mp135f-dk-mx.dts
@@ -124,6 +124,14 @@
 
 }; /*root*/
 
+&sdmmc1_io {
+	vddsd1-supply = <&vdd>;
+};
+
+&sdmmc2_io {
+	vddsd2-supply = <&vdd>;
+};
+
 /*Warning: the configuration of the secured GPIOs should be added in (addons) User Section*/
 &pinctrl {
 	i2c4_pins_mx: i2c4_mx-0 {
