--- a/.github/workflows/buildroot-external-st.yml
+++ b/.github/workflows/buildroot-external-st.yml
@@ -29,8 +29,6 @@ jobs:
         run: make -C buildroot O=../output legal-info
       - name: Build SDK
         run: make -C buildroot O=../output sdk
-      - name: Compress sdcard.img
-        run: gzip -9 output/images/sdcard.img
       - name: Archive and compress sources
         run: tar -cf - -C output/legal-info sources | gzip -9 - > sources-${{ matrix.config }}.tar.gz
       - name: Archive and compress licenses
@@ -39,11 +37,14 @@ jobs:
         run: |
              cp buildroot-external-st/.github/workflows/README README
              sed -ie "s|#CONFIG#|${{ matrix.config }}|" README
-             sed -ie "s|#REV#|${{ env.repo_version }}|" README
+             sed -ie "s|#BR_REV#|${{ env.repo_version }}|" README
+             sed -ie "s|#BR_EXT_REV#|${{ github.ref_name }}|" README
       - name: Register to b2
         run: b2 authorize_account ${{ secrets.B2_KEY_ID }} ${{ secrets.B2_APPLICATION_KEY }}
       - name: Store image
-        run: b2 upload-file bootlin-buildroot-st output/images/sdcard.img.gz ${{ github.ref_name }}/image-${{ matrix.config }}.img.gz
+        run: |
+             b2 upload-file bootlin-buildroot-st output/images/sdcard.img.gz ${{ github.ref_name }}/sdcard-${{ matrix.config }}.img.gz
+             b2 upload-file bootlin-buildroot-st output/images/sdcard.img.bmap ${{ github.ref_name }}/sdcard-${{ matrix.config }}.img.bmap
       - name: Store SDK
         run: b2 upload-file bootlin-buildroot-st output/images/arm-buildroot-linux-gnueabihf_sdk-buildroot.tar.gz ${{ github.ref_name }}/arm-buildroot-linux-gnueabihf_sdk-${{ matrix.config }}.tar.gz
       - name: Store sources
