--- a/board/stmicroelectronics/stm32mp2/genimage-demo.cfg
+++ b/board/stmicroelectronics/stm32mp2/genimage-demo.cfg
@@ -3,7 +3,12 @@ image sdcard.img {
 		partition-table-type = "gpt"
 	}
 
-	partition fsbla {
+	partition fsbla1 {
+		image = "tf-a-stm32mp257f-ev1.stm32"
+		size = 256k
+	}
+
+	partition fsbla2 {
 		image = "tf-a-stm32mp257f-ev1.stm32"
 		size = 256k
 	}
@@ -14,10 +19,23 @@ image sdcard.img {
 		partition-type-uuid = "8a7a84a0-8387-40f6-ab41-a8b9a5a60d23"
 	}
 
-	partition fip {
+	partition metadata2 {
+		image = "metadata.bin"
+		size = 256k
+		partition-type-uuid = "8a7a84a0-8387-40f6-ab41-a8b9a5a60d23"
+	}
+
+	partition fip-a {
 		image = "fip.bin"
 		size = 4M
 		partition-uuid = "4fd84c93-54ef-463f-a7ef-ae25ff887087"
+		partition-type-uuid = "19d5df83-11b0-457b-be2c-7559c13142a5"
+	}
+
+	partition fip-b {
+		image = "fip.bin"
+		size = 4M
+		partition-uuid = "09c54952-d5bf-45af-acee-335303766fb3"
 		partition-type-uuid = "19d5df83-11b0-457b-be2c-7559c13142a5"
 	}
 
