board/st/genimage: set bootable flag on rootfs partitions
Signed-off-by: Romain Gantois <romain.gantois@bootlin.com>

--- a/board/stmicroelectronics/stm32mp2/genimage-demo.cfg
+++ b/board/stmicroelectronics/stm32mp2/genimage-demo.cfg
@@ -48,6 +48,7 @@ image sdcard.img {
 	partition rootfs {
 		image = "rootfs.ext4"
 		partition-uuid="e91c4e10-16e6-4c0e-bd0e-77becf4a3582"
+		bootable = "yes"
 	}
 }
 
