configs/st_mp257_demo: Add OTA support
Signed-off-by: Romain Gantois <romain.gantois@bootlin.com>

--- a/board/stmicroelectronics/stm32mp2/genimage-demo.cfg
+++ b/board/stmicroelectronics/stm32mp2/genimage-demo.cfg
@@ -27,28 +27,50 @@ image sdcard.img {
 
 	partition fip-a {
 		image = "fip.bin"
-		size = 4M
+		size = 3M
 		partition-uuid = "4fd84c93-54ef-463f-a7ef-ae25ff887087"
 		partition-type-uuid = "19d5df83-11b0-457b-be2c-7559c13142a5"
 	}
 
 	partition fip-b {
 		image = "fip.bin"
-		size = 4M
+		size = 3M
 		partition-uuid = "09c54952-d5bf-45af-acee-335303766fb3"
 		partition-type-uuid = "19d5df83-11b0-457b-be2c-7559c13142a5"
 	}
 
 	partition u-boot-env {
-		offset = 9233k
-		size = 512k
+		image = "uEnv.bin"
+		offset = 9M
+		size = 8k
 		partition-type-uuid = "3de21764-95bd-54bd-a5c3-4abe786f38a8"
 	}
 
-	partition rootfs {
-		image = "rootfs.ext4"
-		partition-uuid="e91c4e10-16e6-4c0e-bd0e-77becf4a3582"
+	partition u-boot-env-red {
+		image = "uEnv.bin"
+		offset = 9472k
+		size = 8k
+		partition-type-uuid = "3de21764-95bd-54bd-a5c3-4abe786f38a8"
+	}
+
+	partition rootfs-a {
+		image = "rootfs.squashfs"
 		bootable = "yes"
 	}
+
+	partition rootfs-b {
+		image = "rootfs.squashfs"
+		bootable = "yes"
+	}
+
+	partition data {
+		image = "data.ext4"
+	}
+}
+
+image data.ext4 {
+	name = "data"
+	ext4 {}
+	size = 200M
 }
 
