docs/qt5.md: Add qt5 packages and instructions for stm32mp257
This demo is almost complete. The only missing piece is the GPU driver provided
by the gcnano-binaries package. Currently, the stm32mp-oem version of this
package has support for stm32mp257 platforms, but this is not the case for the
upstream package which is integrated in Buildroot.

Add QT5 demo instructions and packages.

Signed-off-by: Romain Gantois <romain.gantois@bootlin.com>

--- a/configs/st_stm32mp257f_ev1_demo_defconfig
+++ b/configs/st_stm32mp257f_ev1_demo_defconfig
@@ -17,19 +17,27 @@ BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="st/stm32mp257f-ev1"
 BR2_LINUX_KERNEL_INSTALL_TARGET=y
 BR2_PACKAGE_LINUX_TOOLS_GPIO=y
-BR2_PACKAGE_GSTREAMER1=y
-BR2_PACKAGE_GST1_PLUGINS_GOOD=y
-BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_UDP=y
-BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_V4L2=y
 BR2_PACKAGE_YAVTA=y
 BR2_PACKAGE_QT5=y
 BR2_PACKAGE_QT5BASE_EXAMPLES=y
 BR2_PACKAGE_QT5BASE_GUI=y
+BR2_PACKAGE_QT5BASE_WIDGETS=y
+BR2_PACKAGE_QT5BASE_LINUXFB=y
+BR2_PACKAGE_QT5BASE_EGLFS=y
+BR2_PACKAGE_QT5BASE_FONTCONFIG=y
+BR2_PACKAGE_XKEYBOARD_CONFIG=y
 BR2_PACKAGE_EVTEST=y
-BR2_PACKAGE_LIBDRM=y
+BR2_PACKAGE_CAIRO=y
+BR2_PACKAGE_CAIRO_PNG=y
+BR2_PACKAGE_JPEG=y
+BR2_PACKAGE_LIBDRM_ETNAVIV=y
 BR2_PACKAGE_LIBDRM_INSTALL_TESTS=y
+BR2_PACKAGE_WAYLAND_UTILS=y
+BR2_PACKAGE_LIBGUDEV=y
+BR2_PACKAGE_LIBINPUT=y
 BR2_PACKAGE_LIBV4L=y
 BR2_PACKAGE_LIBV4L_UTILS=y
+BR2_PACKAGE_LIBXKBCOMMON=y
 BR2_PACKAGE_CAN_UTILS=y
 BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_OPTEE_EXAMPLES=y
@@ -41,7 +49,7 @@ BR2_PACKAGE_RAUC_STREAMING=y
 BR2_PACKAGE_RAUC_JSON=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
-BR2_TARGET_ROOTFS_EXT2_SIZE="200M"
+BR2_TARGET_ROOTFS_EXT2_SIZE="400M"
 BR2_TARGET_ROOTFS_SQUASHFS=y
 BR2_TARGET_ARM_TRUSTED_FIRMWARE=y
 BR2_TARGET_ARM_TRUSTED_FIRMWARE_CUSTOM_TARBALL=y
