--- a/configs/st_stm32mp157f_dk2_defconfig
+++ b/configs/st_stm32mp157f_dk2_defconfig
@@ -19,6 +19,8 @@ BR2_LINUX_KERNEL_INTREE_DTS_NAME="stm32mp157f-dk2"
 BR2_LINUX_KERNEL_INSTALL_TARGET=y
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 BR2_PACKAGE_OPTEE_CLIENT=y
+BR2_PACKAGE_OPTEE_CLIENT_CUSTOM_TARBALL=y
+BR2_PACKAGE_OPTEE_CLIENT_CUSTOM_TARBALL_LOCATION="$(call github,OP-TEE,optee_client)3.19.0.tar.gz"
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="120M"
