configs/stm32mp257f: Fix OP-TEE OS build variables
For STM32MP2, OP-TEE OS need to have the CFG_SCMI_SCPFW build varible set
to Y. Update the Buildroot config accordingly.

Signed-off-by: Kory Maincent <kory.maincent@bootlin.com>

--- a/configs/st_stm32mp257f_ev1_defconfig
+++ b/configs/st_stm32mp257f_ev1_defconfig
@@ -37,7 +37,7 @@ BR2_TARGET_OPTEE_OS_NEEDS_PYTHON_CRYPTOGRAPHY=y
 # BR2_TARGET_OPTEE_OS_SDK is not set
 # BR2_TARGET_OPTEE_OS_SERVICES is not set
 BR2_TARGET_OPTEE_OS_PLATFORM="stm32mp2"
-BR2_TARGET_OPTEE_OS_ADDITIONAL_VARIABLES="CFG_EMBED_DTB_SOURCE_FILE=stm32mp257f-ev1.dts CFG_SCMI_SCPFW=n"
+BR2_TARGET_OPTEE_OS_ADDITIONAL_VARIABLES="CFG_EMBED_DTB_SOURCE_FILE=stm32mp257f-ev1.dts CFG_SCMI_SCPFW=y"
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_TARBALL=y
